# angles-python-client

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: bump-version.yml  publish-testpypi.yml  publish.yml  release-on-main.yml
angles_python_client/: __init__.py  _serialize.py  exceptions.py  http.py  reporter.py  requests.py
angles_python_client/models/: __init__.py  action.py  artifact.py  baseline.py  build.py  enums.py  environment.py  execution.py  ignore_box.py  platform.py  requests.py  responses.py  screenshot.py  step.py  team.py  versions.py
